# velha-game

./: .travis.yml  README.md  configure
velha/: CMakeLists.txt  package.xml
velha/include/: velha.cpp  velha.h
velha/src/: play.cpp  velha.cpp
velha_ros/: CMakeLists.txt  package.xml
velha_ros/action/: Move.action
velha_ros/src/: robot_play.cpp  robot_player.cpp  robot_server.cpp
velha_ros/srv/: MakeMove.srv
